[gd_scene load_steps=4 format=3 uid="uid://da637b84j7xao"]

[ext_resource type="Script" uid="uid://b36et2h2m7i8h" path="res://System/game_manager.gd" id="1_vwsyi"]

[sub_resource type="LabelSettings" id="LabelSettings_vwsyi"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_elpei"]
font_size = 26

[node name="GameManager" type="Node3D"]
script = ExtResource("1_vwsyi")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="HUD" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShipStats" type="PanelContainer" parent="CanvasLayer/HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HUD/ShipStats"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HUD/ShipStats/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/HUD/ShipStats/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
rounded = true

[node name="ShieldsBar" type="ProgressBar" parent="CanvasLayer/HUD/ShipStats/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
rounded = true

[node name="PowerBar" type="ProgressBar" parent="CanvasLayer/HUD/ShipStats/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
rounded = true

[node name="Score" type="PanelContainer" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -102.0
offset_bottom = 53.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HUD/Score"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HUD/Score/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/HUD/Score/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HUD/Score/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="TimeTitleLabel" type="Label" parent="CanvasLayer/HUD/Score/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "Time: "
label_settings = SubResource("LabelSettings_vwsyi")

[node name="TimeLabel" type="Label" parent="CanvasLayer/HUD/Score/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "12:03"
label_settings = SubResource("LabelSettings_vwsyi")

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/HUD/Score/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/HUD/Score/MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="ScoreTitleLabel" type="Label" parent="CanvasLayer/HUD/Score/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer2"]
layout_mode = 2
text = "Score: "
label_settings = SubResource("LabelSettings_vwsyi")

[node name="ScoreLabel" type="Label" parent="CanvasLayer/HUD/Score/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "15053"
label_settings = SubResource("LabelSettings_vwsyi")

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/PauseMenu"]
custom_minimum_size = Vector2(350, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -125.0
offset_right = 175.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -57.0
offset_right = 45.5
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Paused"
label_settings = SubResource("LabelSettings_elpei")

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Quit" type="Button" parent="CanvasLayer/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="ScoreSheet" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/ScoreSheet"]
custom_minimum_size = Vector2(350, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -125.0
offset_right = 175.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ScoreSheet/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -57.0
offset_right = 45.5
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/ScoreSheet/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "EndGame"
label_settings = SubResource("LabelSettings_elpei")

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/ScoreSheet/Panel/VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="CanvasLayer/ScoreSheet/Panel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="DebugScreen" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/DebugScreen"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DebugScreen/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/DebugScreen/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="BulletTitleLabel" type="Label" parent="CanvasLayer/DebugScreen/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Bullets: "

[node name="BulletCountLabel" type="Label" parent="CanvasLayer/DebugScreen/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "471321"

[node name="LevelTimer" type="Timer" parent="."]

[connection signal="pressed" from="CanvasLayer/PauseMenu/Panel/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/Panel/VBoxContainer/Quit" to="." method="_on_quit_to_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/ScoreSheet/Panel/VBoxContainer/Quit" to="." method="_on_quit_to_menu_pressed"]
